--- a/package.json
+++ b/package.json
@@ -41,7 +41,12 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-query": "^5.66.7",
+    "@trpc/client": "^11.0.0-rc.781",
+    "@trpc/react-query": "^11.0.0-rc.781",
+    "@trpc/server": "^11.0.0-rc.781",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "concurrently": "^9.1.2",
@@ -61,6 +66,7 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
+    "server-only": "^0.0.1",
     "shadcn-ui": "^0.9.4",
     "sonner": "^1.7.4",
     "svix": "^1.57.0",
