--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev:all": "concurrently \"bun run dev:webhook\" \"bun run dev\"",
     "dev": "next dev",
-    "dev:webhook": "ngrok http --url=obliging-condor-nice.ngrok-free.app 3000",
+    "dev:webhook": "ngrok http 3000 --subdomain=obliging-condor-nice 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -41,12 +41,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@tanstack/react-query": "^5.66.7",
-    "@trpc/client": "^11.0.0-rc.781",
-    "@trpc/react-query": "^11.0.0-rc.781",
-    "@trpc/server": "^11.0.0-rc.781",
     "class-variance-authority": "^0.7.1",
-    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "concurrently": "^9.1.2",
@@ -66,10 +61,8 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
-    "server-only": "^0.0.1",
     "shadcn-ui": "^0.9.4",
     "sonner": "^1.7.4",
-    "superjson": "^2.2.2",
     "svix": "^1.57.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
