--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev:all": "concurrently \"bun run dev:webhook\" \"bun run dev\"",
     "dev": "next dev",
-    "dev:webhook": "https://1c7e-2409-4080-9289-35c-e94d-c9d2-f3b2-71ba.ngrok-free.app 3000",
+    "dev:webhook": "ngrok http 3000 --subdomain=obliging-condor-nice 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -41,8 +41,6 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@upstash/ratelimit": "2.0.5",
-    "@upstash/redis": "^1.34.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
