--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
+    "drizzle-zod": "0.7.0",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "install": "^0.13.0",
