--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@uploadthing/react": "7.1.5",
+    "@upstash/workflow": "0.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
