--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.3",
+    "@google/generative-ai": "^0.22.0",
     "@hookform/resolvers": "^4.1.0",
     "@mux/mux-node": "9.0.1",
     "@mux/mux-player-react": "3.2.4",
