--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:all": "concurrently \"bun run dev:webhook\" \"bun run dev\"",
+    "dev:all": "concurrently \"bun run dev:webhook\" \"bun run dev\" ",
     "dev": "next dev",
-    "dev:webhook": "ngrok http 3000 --subdomain=obliging-condor-nice 3000",
+    "dev:webhook": "ngrok http --url=repeatedly-eternal-worm.ngrok-free.app 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -51,7 +51,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "concurrently": "^9.1.2",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "0.7.0",
